<resources>
    <string name="app_name">Math Game</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="_60">60</string>
    <string name="time">Time</string>
    <string name="_3">3</string>
    <string name="life">Life</string>
    <string name="_0">0</string>
    <string name="score">Score</string>
    <string name="please_write_your_answer_here">Please write your answer here</string>
    <string name="next_question">Next question</string>
    <string name="ok">OK</string>
    <string name="textview">TextView</string>

    <string name="sorry_your_answer_is_wrong">SORRY, your answer is WRONG!</string>
    <string name="congratulations_your_answer_is_correct">Congratulations, your answer is CORRECT!</string>
    <string name="sorry_time_is_up">SORRY! Time is UP!!</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="exit_game">EXIT GAME</string>



</resources>