<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Multiplication"
    android:background="@drawable/second2">

    <LinearLayout
        android:id="@+id/secondLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/score"
            android:textColor="@color/material_dynamic_neutral_variant100" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textColor="@color/material_dynamic_neutral_variant100" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/life"
            android:textColor="@color/material_dynamic_neutral_variant100" />

        <TextView
            android:id="@+id/textViewLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textColor="@color/material_dynamic_neutral_variant100" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="@color/material_dynamic_neutral_variant100" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/_60"
            android:textColor="@color/material_dynamic_neutral_variant100" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/multiplication"
        android:textSize="24sp"
        android:textColor="@color/material_dynamic_neutral100" />

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/please_write_your_answer_here"
        android:textColor="@color/material_dynamic_neutral100"
        android:textColorHint="@color/material_dynamic_neutral70" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/ok" />

        <Button
            android:id="@+id/buttonNextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/material_dynamic_primary70"
            android:text="@string/next_question" />
    </LinearLayout>

</LinearLayout>