<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/first">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral40"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="MATH GAME"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAddition"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="150dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/material_dynamic_neutral40"
            android:text="@string/addition"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSubtraction"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/material_dynamic_neutral40"
            android:text="@string/subtraction"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/material_dynamic_neutral40"
            android:text="@string/multiplication"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>